--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,45 +1,49 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100vw;
 }
 
 .logo {
   height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
 }
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.row {
+  display: flex;
+  justify-content: space-between;
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.column-half {
+  flex-basis: 50%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.header-column {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.heading {
+  background-color: #350000;
 }
 
-.card {
-  padding: 2em;
+.heading h3 {
+  color: white;
+  font-family: Barlow, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.2rem;
 }
 
-.read-the-docs {
-  color: #888;
+.heading a {
+  color: white;
+  font-family: Barlow, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.2rem;
+}
+
+.outlet-body {
+  background-color: #2e2e2e;
+  height: 100vh;
 }
