--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  background-color: #242424;
+  background-color: #2e2e2e;
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,6 +15,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #2e2e2e;
 }
 
 h1 {
@@ -59,4 +60,8 @@ a:hover {
   button {
     background-color: #f9f9f9;
   }
+}
+
+ul {
+  list-style-type: none;
 }
