--- a/client/src/components/RatingComponent.css
+++ b/client/src/components/RatingComponent.css
@@ -16,10 +16,6 @@
   align-content: center;
 }
 
-.column-third:hover {
-  cursor: pointer;
-}
-
 h5 {
   color: #d9d9d9;
   font-family: Barlow, sans-serif;
@@ -33,4 +29,9 @@ h5 {
   color: grey;
   cursor: pointer;
   background-color: #870e0e;
+}
+
+svg > path:hover {
+  color: #4a1b1b;
+  cursor: pointer;
 }
