Added in wishlist add, delete, and icon display on film details

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,11 @@
 .row {
   display: flex;
   justify-content: space-between;
+  align-content: space-between;
+}
+
+.row.filmCard-row {
+  flex-wrap: wrap;
 }
 
 .column-half {
