Cleaned filmLog and Wishlist to include posterPath to save having to do all the TMDB calls on all items.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,6 +29,15 @@
   cursor: pointer;
 }
 
+.filmCard.void {
+  visibility: hidden;
+}
+
+.filmCard.void:hover {
+  border: none;
+  cursor: default;
+}
+
 .outlet-body h5 {
   color: white;
   font-family: Barlow, sans-serif;
