--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -10,6 +10,27 @@ dialog::backdrop {
   background: rgba(23, 22, 22, 0.955);
 }
 
+dialog h1 {
+  font-family: Barlow, sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  font-size: 1.5rem;
+  color: white;
+}
+
+dialog textarea {
+  width: 100%;
+  height: 100%;
+}
+
+dialog textarea::placeholder {
+  font-family: Barlow, sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  font-size: 1rem;
+  color: black;
+}
+
 dialog h2 {
   font-family: Barlow, sans-serif;
   font-weight: 200;
