--- a/client/src/pages/ReviewsPage.css
+++ b/client/src/pages/ReviewsPage.css
@@ -27,6 +27,7 @@
 .column-two-thirds {
   flex-basis: 80%;
   padding: 2rem;
+  padding-top: 0;
 }
 
 .column-two-thirds h1 {
@@ -36,6 +37,7 @@
   font-size: 2.25rem;
   margin-bottom: 0;
   margin-right: 2rem;
+  margin-top: 0;
 }
 
 .column-two-thirds h3 {
