--- a/client/src/components/Heading.css
+++ b/client/src/components/Heading.css
@@ -86,5 +86,67 @@ input::placeholder {
 }
 
 .search-row input {
-  width: 50%;
+  width: 66%;
+}
+
+@media only screen and (width <= 875px) {
+  .logo-title {
+    display: none;
+  }
+
+  .heading .column-half {
+    flex-basis: content;
+  }
+
+  .heading .header-column h3 {
+    margin-right: 1rem;
+  }
+
+  .heading .header-column span {
+    margin-right: 1rem;
+  }
+
+  .heading .header-column a {
+    margin-right: 1rem;
+  }
+}
+
+@media only screen and (width <= 600px) {
+  .row.heading {
+    padding-left: 1.2rem;
+  }
+
+  body button {
+    padding: 0.33rem;
+    font-size: 0.66rem;
+  }
+
+  .heading .header-column h3 {
+    font-size: 0.8rem;
+  }
+
+  .logo-icon {
+    height: 3.96em;
+  }
+
+  .heading .header-column a.profile-button {
+    width: 33px;
+    height: 33px;
+    font-size: 1.32rem;
+  }
+
+  .heading input {
+    height: 0.8rem;
+    border: none;
+    width: 50%;
+  }
+
+  .heading input::placeholder {
+    font-size: 0.66rem;
+  }
+
+  .heading .sign-in-form input {
+    margin-right: 1.32rem;
+    margin-left: 0.66rem;
+  }
 }
