--- a/client/src/pages/FilmAndWishlist.css
+++ b/client/src/pages/FilmAndWishlist.css
@@ -9,3 +9,9 @@
 .row.list-nav-row .clickable:hover {
   cursor: pointer;
 }
+
+@media only screen and (width <= 600px) {
+  .row.list-nav-row h4 {
+    font-size: 0.858rem;
+  }
+}
