--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -11,3 +11,10 @@
   flex-basis: 100%;
   text-align: center;
 }
+
+@media only screen and (width <= 600px) {
+  body .home-container h1 {
+    font-size: 1.65rem;
+    line-height: 0.66rem;
+  }
+}
