--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,7 +48,7 @@
 }
 
 .film-master-wrapper .card-rating-row {
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -58,6 +58,11 @@
 .film-master-wrapper a:hover {
   cursor: pointer;
   background-color: #870e0e;
+}
+
+.film-master-wrapper .card-rating-row svg > path:hover {
+  cursor: default;
+  color: inherit;
 }
 
 .outlet-body h5 {
